feat: add AWS deployment scripts and backend updates
- Add aws-infra/setup.ps1 - one-time AWS resource creation (S3, CloudFront, EC2, ECR)
- Add aws-infra/README.md - full deployment guide with cost estimates
- Add backend/deploy-aws.ps1 - Docker build, ECR push, EC2 SSH deploy
- Add frontend/deploy-aws.ps1 - React build, S3 sync, CloudFront invalidation
- Update SecurityConfig: dynamic CORS from env var, permit /actuator/health
- Update application.properties: CORS env override, expose actuator health endpoint
- Update pom.xml: add spring-boot-starter-actuator dependency